[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "offlane"
version = "0.1.2"
description = "Move an MCP server's read results off your LLM context window — payloads land on disk, only a summary prints, you jq-project what you need."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "RapDev" }]
keywords = ["mcp", "model-context-protocol", "llm", "agents", "context-window", "cli", "jq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
# stdlib-only on purpose: the installed command has zero runtime dependencies,
# so it drops cleanly into a locked-down sandbox with no transitive install.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
offlane = "offlane:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["offlane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
